   "Win: Black mates": 9
   "Win: White mates": 9
Finished match

Remove Mop - Up [Thank god!]

Score of midnight-dev vs midnight-latest: 136 - 126 - 135 [0.513]
...      midnight-dev playing White: 74 - 58 - 66  [0.540] 198
...      midnight-dev playing Black: 62 - 68 - 69  [0.485] 199
...      White vs Black: 142 - 120 - 135  [0.528] 397
Elo difference: 8.8 +/- 27.8, LOS: 73.2 %, DrawRatio: 34.0 %
402 of 1000 games finished.

Player: midnight-dev
   "Draw by 3-fold repetition": 79
   "Draw by fifty moves rule": 16
   "Draw by insufficient mating material": 37
   "Draw by stalemate": 3
   "Loss: Black mates": 58
   "Loss: White mates": 68
   "No result": 5
   "Win: Black mates": 62
   "Win: White mates": 74
Player: midnight-latest
   "Draw by 3-fold repetition": 79
   "Draw by fifty moves rule": 16
   "Draw by insufficient mating material": 37
   "Draw by stalemate": 3
   "Loss: Black mates": 62
   "Loss: White mates": 74
   "No result": 5
   "Win: Black mates": 58
   "Win: White mates": 68

Rank * 10 Bonus for Passed Pawns

Score of midnight-dev vs midnight-latest: 417 - 340 - 243 [0.538]
...      midnight-dev playing White: 193 - 194 - 113  [0.499] 500
...      midnight-dev playing Black: 224 - 146 - 130  [0.578] 500
...      White vs Black: 339 - 418 - 243  [0.461] 1000
Elo difference: 26.8 +/- 18.8, LOS: 99.7 %, DrawRatio: 24.3 %
1000 of 1000 games finished.

Player: midnight-dev
   "Draw by 3-fold repetition": 163
   "Draw by adjudication": 1
   "Draw by fifty moves rule": 19
   "Draw by insufficient mating material": 55
   "Draw by stalemate": 5
   "Loss: Black mates": 194
   "Loss: White mates": 146
   "Win: Black mates": 224
   "Win: White mates": 193
Player: midnight-latest
   "Draw by 3-fold repetition": 163
   "Draw by adjudication": 1
   "Draw by fifty moves rule": 19
   "Draw by insufficient mating material": 55
   "Draw by stalemate": 5
   "Loss: Black mates": 224
   "Loss: White mates": 193
   "Win: Black mates": 194
   "Win: White mates": 146