@@ -6,8 +6,9 @@
 //
 
 constexpr Score PASSED_PAWN_BONUS = S(10, 10);
+constexpr Score ISOLATED_PAWN_PENALTY = S(-8, -16);
 
-// If this is updated be sure compute_game_phase loop is also updated.
+// If this is updated be sure compute_game_phase loop is also updated. Currently only checks non-zeros.
 constexpr int GAME_PHASE_BONUS[NPIECE_TYPES] = {
 		0, 1, 1, 2, 4, 0
 };
